--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,269 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+/* Home page */
+#hero {
+  width: 100%;
+  height: 80vh;
+  background: white;
+}
+
+#hero .container {
+  padding-top: 72px;
+}
+
+#hero h1 {
+  margin: 0 0 10px 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  color: rgba(49, 12, 136, 0.61);
+}
+
+#hero h2 {
+  color: rgb(73, 9, 92);
+  margin-bottom: 50px;
+  font-size: 24px;
+}
+
+#hero .btn-get-started {
+  font-family: "Jost", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 28px 11px 28px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px 0 0 0;
+  color: #fff;
+  background: #47b2e4;
+}
+
+#hero .btn-get-started:hover {
+  background: #209dd8;
+}
+
+#hero .btn-watch-video {
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  transition: 0.5s;
+  margin: 10px 0 0 25px;
+  color: #fff;
+  line-height: 1;
+}
+
+#hero .btn-watch-video i {
+  line-height: 0;
+  color: #fff;
+  font-size: 32px;
+  transition: 0.3s;
+  margin-right: 8px;
+}
+
+#hero .btn-watch-video:hover i {
+  color: #47b2e4;
+}
+
+#hero .animated {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+.bgimage {
+  height: 100vh;
+  background: url('assets/images/');
+  background-size: cover;
+  position: relative;
+}
+
+.container-fluid a {
+  text-decoration: none;
+}
+
+#navbarSupportedContent ul a {
+  text-decoration: none;
+  font-size: 18px;
+  padding-left: 20px;
+  padding-right: 30px;
+  position: relative;
+}
+
+#navbarSupportedContent ul a::after {
+  content: '';
+  width: 0;
+  height: 3px;
+  background: rgba(49, 12, 136, 0.61);
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  transition: 0.5s;
+}
+
+#navbarSupportedContent ul a:hover::after {
+  width: 90%;
+}
+
+.hero_title span {
+  color: #ff004f;
+}
+
+.hero_title {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  font-size: 4.5rem;
+  margin-left: 850px;
+  margin-top: 150px;
+}
+
+#take-btn {
+  transition: background 0.5s;
+}
+
+#view-btn {
+  transition: background 0.5s;
+}
+
+#take-btn:hover {
+  background: rgb(186, 148, 209);
+}
+
+#view-btn:hover {
+  background: rgb(186, 148, 209);
+}
+
+.hero_desc {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 2rem;
+  margin-left: 850px;
+  margin-top: 20px;
+}
+
+#logo {
+  height: 80px;
+  margin-top: -125px;
+  transition: transform 0.3s; /* 添加过渡效果 */
+}
+
+#land_girl {
+  width: 500px;
+  height: 500px;
+  float: left;
+  margin-top: 170px;
+  margin-left: 190px;
+}
+
+#logo:hover {
+  transform: translateY(-10px);
+}
+
+/* Survey List Page */
+
+/* Media Queries */
+
+@media (max-width: 991px) {
+  #hero {
+    height: 100vh;
+    text-align: center;
+  }
+
+  #hero .animated {
+    -webkit-animation: none;
+    animation: none;
+  }
+
+  #hero .hero-img {
+    text-align: center;
+  }
+
+  #hero .hero-img img {
+    width: 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  #hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  #hero h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+
+  #hero .hero-img img {
+    width: 70%;
+  }
+
+  #logo {
+    width: 200px; /* 在较小的屏幕上设置较小的宽度 */
+  }
+}
+
+@media (max-width: 575px) {
+  #hero .hero-img img {
+    width: 80%;
+  }
+
+  #hero .btn-get-started {
+    font-size: 16px;
+    padding: 10px 24px 11px 24px;
+  }
+
+  #logo {
+    width: 150px; /* 在更小的屏幕上设置更小的宽度 */
+  }
+}
+
+@-webkit-keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+/**/
+
+#table_title {
+  margin-left: 875px;
+}
+
+#add_btn {
+  margin-left: 500px;
+}
+
+#curr_session {
+  margin-left: 800px;
+}
+
+#login_nav {
+  margin-left: 1100px;
+}
+
+.nav-login {
+  margin-left: 1100px;
+}
+
+.message {
+  margin-top: 40px;
+}
+
+.main-container {
+  margin-bottom: 65px;
+  margin-top: 65px;
 }
