--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,15 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- CSS Section -->
-  
-  <!-- <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">  -->
-  <!--Do not need to mention node_module because the path is already mentioned in app.js-->
-  <!-- <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"> -->
-  <!-- <link rel='stylesheet' href='/content/app.css' /> -->
-
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<!-- Bootstrap JavaScript -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 <body>
