--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,30 +1,74 @@
 <%- include ../partials/header.ejs %>
 
-<%- include ../partials/main_nav.ejs %>
-<h1>Register</h1>
-<div class="message">
-  <!-- Message Area -->
-  <% if(messages.length > 0) {%>
-  <div class="alert alert-danger">
-      <%= messages %>
-  </div>
-  <% } %>
-</div>
-<form method="POST">
-  <div>
-    <label for="username">Username</label>
-    <input type="text" id="username" name="username" required>
-  </div>
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <button type="submit">Register</button>
-</form>
-<a href="/users/login">Login</a>
+  <%- include ../partials/main_nav.ejs %>
 
-<%- include ../partials/footer.ejs %>
+    <main class="container">
+      <div class="message">
+        <!-- Message Area -->
+        <% if(messages.length> 0) {%>
+          <div class="alert alert-danger">
+            <%= messages %>
+          </div>
+          <% } %>
+      </div>
+      <section class="vh-70">
+        <div class="container h-70">
+          <div class="row d-flex justify-content-center align-items-center h-70">
+            <div class="col-lg-14 col-xl-10">
+              <div class="card text-black" style="border-radius: 25px;">
+                <div class="card-body p-md-5">
+                  <div class="row justify-content-center">
+                    <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">New Account</p>
+
+                      <form method="POST" class="mx-1 mx-md-4">
+
+                        <div class="d-flex flex-row align-items-center mb-4">
+                          <i class="fas fa-user fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="text" id="username" class="form-control" name="username" required>
+                            <label class="form-label" for="username">UserName</label>
+                          </div>
+                        </div>
+
+                        
+                        <div class="d-flex flex-row align-items-center mb-4">
+                          <i class="fas fa-envelope fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="email" id="email" class="form-control" name="email" required>
+                            <label class="form-label" for="email">Email</label>
+                          </div>
+                        </div>
+
+
+                        <div class="d-flex flex-row align-items-center mb-4">
+                          <i class="fas fa-lock fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="password" id="password" class="form-control" name="password" required>
+                            <label class="form-label" for="password">Password</label>
+                          </div>
+                        </div>
+
+
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                          <input type="submit" class="btn btn-primary" value="Register">
+                        </div>
+                      </div>
+                      </form>
+                      <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                        <img src="/images/reg2.jpg" class="img-fluid" alt="Sample image">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <%- include ../partials/footer.ejs %>
