--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,8 +1,11 @@
-<!-- 导航栏 -->
+
+<!-- Main Nav -->
+
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -10,22 +13,35 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/"> Home</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/survey/list"> Surveys</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/survey/manage">My Surveys</a>
-        </li>
       </ul>
+
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <!-- If displayName is a string and exists -->
         <% if(username) { %>
-          <li class="navbar-text"> Welcome, <%= username %></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li class="nav-item"><a href="/users/logout" class="nav-link" onclick="return confirm('Are you sure you want to logout?')">Logout</a></li>
-        <% } else { %>
-          <li class="nav-item"><a href="/users/login" class="nav-link" >Login</a></li>
-        <% } %>
+          <li class="navbar-text"> Welcome, <%= username %>
+          </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li class="nav-item"><a href="/users/logout" class="nav-link"
+              onclick="return confirm('Are you sure you want to logout?')">Logout</a></li>
+          <% } else { %>
+            <li class="nav-item"><a href="/users/login" class="nav-link">Login</a></li>
+            <% } %>
       </ul>
     </div>
   </div>
 </nav>
+
+<script>
+  $(document).ready(function() {
+    // 当折叠按钮被点击时
+    $('.navbar-toggler').click(function() {
+      // 通过 data-bs-target 属性获取折叠内容的目标
+      var target = $(this).data('bs-target');
+      // 切换目标折叠内容的可见性
+      $(target).collapse('toggle');
+    });
+  });
+</script>
