--- a/server/views/page/add.ejs
+++ b/server/views/page/add.ejs
@@ -22,7 +22,7 @@
         <form id="surveyForm" method="POST">
             <div class="form-group mb-3">
                 <label for="surveyTitle">Survey Title</label>
-                <input type="text" class="form-control id="surveyTitle" placeholder="Enter Survey Title" name="title" required>
+                <input type="text" class="form-control" id="surveyTitle" placeholder="Enter Survey Title" name="title" required>
             </div>
 
             <div class="form-group mb-3">
