--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,6 +159,30 @@ body {
   transform: translateY(-10px);
 }
 
+.custom-input {
+  width: 75%;
+  margin-left: 5px;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+/* 当输入框获取焦点时的样式 */
+.custom-input:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 .25rem rgba(0, 123, 255, .25);
+}
+
+
 /* Survey List Page */
 
 /* Media Queries */
