--- a/server/views/page/add.ejs
+++ b/server/views/page/add.ejs
@@ -18,7 +18,7 @@
 <div class="container justify-content-center">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1 class="text-center">Create a Survey</h1>
+            <h1 class="text-center">Create Survey</h1>
         <form id="surveyForm" method="POST">
             <div class="form-group mb-3">
                 <label for="surveyTitle">Survey Title</label>
