--- a/server/views/page/edit.ejs
+++ b/server/views/page/edit.ejs
@@ -1,62 +1,68 @@
-<%- include ../partials/header.ejs %>
+<div style="height: 20px;">
+    <%- include ../partials/header.ejs %>
 
-<%- include ../partials/main_nav.ejs %>
-<div class="container">
-    <h1>Edit Survey</h1>
+    <%- include ../partials/main_nav.ejs %>
+</div>
+<div class="container justify-content-center">
+    <div class="row">
+        <div class="offset-md-3 col-md-6">
+            <h1 class="text-center">Edit Survey</h1>
     <form id="surveyForm" method="POST">
-        <div>
+        <div class="form-group mb-3">
             <label for="surveyTitle">Survey Title</label>
-            <input type="text" id="surveyTitle" placeholder="Enter Survey Title" name="title" required value="<%= survey.title %>">
+            <input type="text" class="form-control" id="surveyTitle" placeholder="Enter Survey Title" name="title" required value="<%= survey.title %>">
         </div>
 
-        <div>
+        <div class="form-group mb-3">
             <label for="description">Survey Description</label>
-            <textarea cols="50" id="description" placeholder="Enter Survey Description" name="description" required><%= survey.description %></textarea>
+            <textarea cols="50" id="description" class="form-control" placeholder="Enter Survey Description" name="description" required><%= survey.description %></textarea>
         </div>
         
-        <div>
+        <div class="form-group mb-3">
             <label for="startDate">Start Date</label>
-            <input type="date" id="startDate" name="startTime" required value="<%= survey.startTime %>">
+            <input type="date" id="startDate" class="form-control" name="startTime" required value="<%= survey.startTime %>">
         </div>
 
-        <div>
+        <div class="form-group mb-3">
             <label for="endDate">End Date</label>
-            <input type="date" id="endDate" name="endTime" required value="<%= survey.endTime %>">
+            <input type="date" id="endDate" class="form-control" name="endTime" required value="<%= survey.endTime %>">
         </div>
-        <div class="question-fields" hidden="true">
+
+        <div class="question-fields form-group mb-3" hidden="true">
             <label for="questionType">Question Type</label>
-            <select name="questionType" id="questionType">
+            <select name="questionType" id="questionType" class="form-control">
                 <option value="<%= survey.questions[0].qType %>"><%= survey.questions[0].qType %></option>
             </select>
-        </div>    
-        <div id="questionFields">
+        </div>
+
+        <div id="questionFields" class="form-group mb-3">
             <% survey.questions.forEach((question, index) => { %>
                 <div class="questionField" data-question-type="<%= question.qType %>">
                     <label for="question<%= index %>Text">Question <%= index + 1 %></label>
                     <% if (question.qType === 'multiple_choice') { %>
                         <!-- 生成多选题 -->
-                        <input type="text" id="question<%= index %>Text" required value="<%= question.qText %>">
+                        <input type="text" id="question<%= index %>Text" required value="<%= question.qText %>" class="form-control" Enter Question Description>
                         <% question.options.forEach((option, optIndex) => { %>
                             <div class="choicesContainer">
-                                <input type="text" class="choiceText" required value="<%= option %>">
-                                <button type="button" class="removeChoice">Remove</button>
+                                <label>Option <%= optIndex+1 %>:</label>
+                                <input type="text" class="choiceText" required value="<%= option %>" class="form-control">
+                                <button type="button" class="removeChoice btn btn-danger">-</button>
                             </div>
                         <% }) %>
-                        <button type="button" class="addChoice">Add Choice</button>
+                        <button type="button" class="addChoice btn btn-primary">Add Choice</button>
                     <% } else if (question.qType === 'short_answers') { %>
                         <!-- 生成简答题 -->
-                        <textarea id="question<%= index %>Text" required><%= question.qText %></textarea>
+                        <textarea id="question<%= index %>Text" required class="form-control"><%= question.qText %></textarea>
                     <% } %>
                     <input type="hidden" value="<%= question._id %>">
                     <input type="hidden" value="<%= question.qType %>">
-                    <button type="button" class="deleteQuestion">Delete Question</button>
+                    <button type="button" class="deleteQuestion btn btn-danger">Delete Question</button>
                 </div>
             <% }) %>
         </div>
         
-        <button type="button" id="addQuestion">Add Question</button>
-        <br>
-        <button type="submit">Update</button>
+        <button type="button" id="addQuestion" class="btn btn-primary">Add Question</button>
+        <button type="submit" class="btn btn-primary">Update</button>
     </form>
 </div>
 <%- include ../partials/footer.ejs %>
