--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -17,11 +17,16 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/survey/list"> Surveys</a>
         </li>
+        
       </ul>
 
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <!-- If displayName is a string and exists -->
         <% if(username) { %>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/survey/manage">My Surveys</a>
+          </li>
+
           <li class="navbar-text"> Welcome, <%= username %>
           </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li class="nav-item"><a href="/users/logout" class="nav-link"
