--- a/server/views/page/list.ejs
+++ b/server/views/page/list.ejs
@@ -1,38 +1,63 @@
 <%- include ../partials/header.ejs %>
 
-<%- include ../partials/main_nav.ejs %>
-<div>
-    <div>
-        <h1>Surveys</h1>
-        <br>
-        <table>
-            <!-- Header Row -->
-            <tr>
-                <th>Survey Name</th>
-                <th>Description</th>
-                <th>End Date</th>
-                <th>Take Survey</th>
-            </tr>
+    <%- include ../partials/main_nav.ejs %>
+        <main class="container mt-5 mb-3">
+            <div class="row">
+                <div class="offset-md-1 col-md-10">
+                    <h1 class="text-center">Surveys</h1>
+                    <a href="/survey/add" class="btn btn-primary" role="button">
+                        <i class="fas fa-plus-circle"></i> Create a Survey </a>
+                    <br>
+                    <table class="table table-bordered table-striped table-hover">
+                        <!-- Header Row -->
+                        <tr>
+                            <th class="text-center col-3">Survey Name</th>
+                            <th class="text-center col-3">Description</th>
+                            <th class="text-center col-2">End Date</th>
+                            <th class="text-center col-2">Take Survey</th>
+                        </tr>
 
-           <!-- Repeatable Template Row -->
-           <% for(let item of SurveyList) { %>
-            <tr>
-                <td>
-                    <%= item.title %>
-                </td>
-                <td>
-                    <%= item.description %>
-                </td>
-                <td>
-                    <%= item.endTime.toISOString().split('T')[0] %>
-                </td>
-                <td>
-                    <a href="/survey/take/<%= item._id %>">
-                        <i class="bi bi-check-square"></i>Take Survey</a>
-                </td>
-            </tr>
-            <% } %>
-    </table>
-    </div>
-</div>
-<%- include ../partials/footer.ejs %>
+                        <!-- Repeatable Template Row -->
+                        <% for(let item of SurveyList) { %>
+                            <% if(new Date(item.endTime)> new Date()) { %>
+                                <tr>
+                                    <td class="text-center col-3">
+                                        <%= item.title %>
+                                    </td>
+                                    <td class="text-center col-3">
+                                        <%= item.description %>
+                                    </td>
+                                    <td class="text-center col-2">
+                                        <%= item.endTime.toISOString().split('T')[0] %>
+                                    </td>
+                                    <td class="text-center col-2">
+                                        <a href="/survey/take/<%= item._id %>" class="btn-primary btn-sm">
+                                            <i class="bi bi-check-square"></i>Take</a>
+                                    </td>
+                                </tr>
+                                <% } %>
+                                    <% } %>
+                    </table>
+
+                    <!-- Pagination Controls -->
+                    <div>
+                        <% if(currentPage> 1) { %>
+                            <a href="/survey/list?page=<%= currentPage - 1 %>" class="btn-primary btn-sm">Prev</a>
+                            <% } %>
+                                Page <%= currentPage %> of <%= totalPages %>
+                                        <% if(currentPage < totalPages) { %>
+                                            <a href="/survey/list?page=<%= currentPage + 1 %>"
+                                                class="btn-primary btn-sm">Next</a>
+                                            <% } %>
+                                                <!-- Allow users to input page number -->
+                                                <form action="/survey/list" method="get" style="display: inline-block;">
+                                                    <input type="number" name="page" min="1" max="<%= totalPages %>"
+                                                        class="form-range">
+                                                    <button type="submit" class="btn-primary">Go</button>
+                                                </form>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+        <%- include ../partials/footer.ejs %>
