--- a/server/views/page/managelist.ejs
+++ b/server/views/page/managelist.ejs
@@ -42,9 +42,7 @@
                                         <i class="bi bi-check-square"></i>DELETE</a>
                                 </td>
                                 <td class="text-center">
-                                    <a href="/survey/result/<%= item._id %>"
-                                        onclick="return confirm('Are you sure you want to delete?')"
-                                        class="btn-primary btn-sm">
+                                    <a href="/survey/result/<%= item._id %>" class="btn-primary btn-sm">
                                         <i class="bi bi-check-square"></i>Check</a>
                                 </td>
                             </tr>
