--- a/server/views/page/list.ejs
+++ b/server/views/page/list.ejs
@@ -5,9 +5,11 @@
             <div class="row">
                 <div class="offset-md-1 col-md-10">
                     <h1 class="text-center">Surveys</h1>
+                    <% if(username) {%>
                     <a href="/survey/add" class="btn btn-primary" role="button">
                         <i class="fas fa-plus-circle"></i> Create a Survey </a>
                     <br>
+                    <% } %>
                     <table class="table table-bordered table-striped table-hover">
                         <!-- Header Row -->
                         <tr>
