--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,15 +1,7 @@
 <%- include ../partials/header.ejs %>
   <%- include ../partials/main_nav.ejs %>
     <main>
-      <div class="message">
-        <!-- Message Area -->
-        <% if(messages.length> 0) {%>
-          <div class="alert alert-danger">
-            <%= messages %>
-          </div>
-          <% } %>
-      </div>
-
+      <br><br>
       <section class="vh-70">
         <div class="container h-70">
           <div class="row d-flex justify-content-center align-items-center h-100">
@@ -21,7 +13,14 @@
 
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
                       <form method="POST" class="mx-1 mx-md-4">
-
+                        <div class="message d-flex flex-row align-items-center mb-4">
+                          <!-- Message Area -->
+                          <% if(messages.length> 0) {%>
+                            <div class="alert alert-danger form-control">
+                              <%= messages %>
+                            </div>
+                            <% } %>
+                        </div>
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
                           <div class="form-outline flex-fill mb-0">
@@ -44,16 +43,13 @@
                       </form>
                     </div>
                     <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
                       <img src="/images/reg1.png" class="img-fluid" alt="Sample image">
-
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
         </div>
       </section>
     </main>
