--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,16 +1,8 @@
 <%- include ../partials/header.ejs %>
 
   <%- include ../partials/main_nav.ejs %>
-
-    <main class="container">
-      <div class="message">
-        <!-- Message Area -->
-        <% if(messages.length> 0) {%>
-          <div class="alert alert-danger">
-            <%= messages %>
-          </div>
-          <% } %>
-      </div>
+    <main>
+      <br><br>
       <section class="vh-70">
         <div class="container h-70">
           <div class="row d-flex justify-content-center align-items-center h-70">
@@ -24,48 +16,58 @@
 
                       <form method="POST" class="mx-1 mx-md-4">
 
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-user fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="username" class="form-control" name="username" required>
-                            <label class="form-label" for="username">UserName</label>
+                        <main class="container">
+                          <div class="message">
+                            <!-- Message Area -->
+                            <% if(messages.length> 0) {%>
+                              <div class="alert alert-danger">
+                                <%= messages %>
+                              </div>
+                              <% } %>
                           </div>
-                        </div>
 
-                        
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-envelope fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="email" id="email" class="form-control" name="email" required>
-                            <label class="form-label" for="email">Email</label>
+                          <div class="d-flex flex-row align-items-center mb-4">
+                            <i class="fas fa-user fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
+                            <div class="form-outline flex-fill mb-0">
+                              <input type="text" id="username" class="form-control" name="username" required>
+                              <label class="form-label" for="username">UserName</label>
+                            </div>
                           </div>
-                        </div>
 
 
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <i class="fas fa-lock fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="password" class="form-control" name="password" required>
-                            <label class="form-label" for="password">Password</label>
+                          <div class="d-flex flex-row align-items-center mb-4">
+                            <i class="fas fa-envelope fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
+                            <div class="form-outline flex-fill mb-0">
+                              <input type="email" id="email" class="form-control" name="email" required>
+                              <label class="form-label" for="email">Email</label>
+                            </div>
                           </div>
-                        </div>
 
 
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <input type="submit" class="btn btn-primary" value="Register">
-                        </div>
-                      </div>
-                      </form>
-                      <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                          <div class="d-flex flex-row align-items-center mb-4">
+                            <i class="fas fa-lock fa-lg me-3 fa-fw" style="margin-bottom:25px"></i>
+                            <div class="form-outline flex-fill mb-0">
+                              <input type="password" id="password" class="form-control" name="password" required>
+                              <label class="form-label" for="password">Password</label>
+                            </div>
+                          </div>
 
-                        <img src="/images/reg2.jpg" class="img-fluid" alt="Sample image">
-                      </div>
+
+                          <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                            <input type="submit" class="btn btn-primary" value="Register">
+                          </div>
+                    </div>
+                    </form>
+                    <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                      <img src="/images/reg2.jpg" class="img-fluid" alt="Sample image">
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
         </div>
       </section>
 
