--- a/server/views/page/takeSurvey.ejs
+++ b/server/views/page/takeSurvey.ejs
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="offset-md-3 col-md-6">
     <h1 class="text-center"><%= survey.title %></h1>
-    <!-- 提交到默认路由 -->
+    <!-- Submit to default route -->
     <form method="post">
         <% const questions = survey.questions %>
         <% let questionNum = 1 %>
