--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,4 +1,3 @@
-
 <!-- Main Nav -->
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -26,8 +25,6 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/survey/manage">My Surveys</a>
           </li>
-
-          <li class="navbar-text"> Welcome, <%= username %>
           </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li class="nav-item"><a href="/users/logout" class="nav-link"
               onclick="return confirm('Are you sure you want to logout?')">Logout</a></li>
@@ -41,11 +38,11 @@
 
 <script>
   $(document).ready(function() {
-    // 当折叠按钮被点击时
+    // When the collapse button is clicked
     $('.navbar-toggler').click(function() {
-      // 通过 data-bs-target 属性获取折叠内容的目标
+      // Get the target collapsible content by the data-bs-target attribute
       var target = $(this).data('bs-target');
-      // 切换目标折叠内容的可见性
+      // Toggle the visibility of the target collapsible content
       $(target).collapse('toggle');
     });
   });
