--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,3 +1,4 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<div class="error-container">
+    <h1>Oops! Something went wrong...</h1>
+    <p>We apologize for the inconvenience. Please try again later.</p>
+</div>
